--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -24,3 +24,6 @@
 @import "sections/_reviews";
 @import "sections/_more";
 @import "sections/_buynow";
+@import "sections/_cart";
+@import "sections/_form";
+@import "sections/_confirmation";
