--- a/dev/scss/sections/_cart.scss
+++ b/dev/scss/sections/_cart.scss
@@ -1,7 +1,11 @@
-#cart{
+#cart {
     padding: 24px;
-    display:flex;
+    display: grid;
     justify-content: center;
+
+    @include lg{
+        display: flex;
+    }
 
 
     h2 {
@@ -27,27 +31,27 @@
 
 #items {
 
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
 
-    a{
+    a {
         @include button2;
     }
 
     @include lg {
-            a {
-                display: flex;
-                justify-content: center;
-                height: fit-content;
-                text-align: center;
-                align-self: center;
-        
-            }
-        
+        a {
             display: flex;
-            flex-direction: row;
             justify-content: center;
+            height: fit-content;
             text-align: center;
-            align-items: center;
+            align-self: center;
+
         }
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
     }
+}
