--- a/dev/scss/sections/_form.scss
+++ b/dev/scss/sections/_form.scss
@@ -1,8 +1,11 @@
 #form{
     padding-top: 80px;
+    align-items: center;
 
     a{
         @include button2;
+        margin-left: 700px;
+        margin-left: 700px;
     }
 
     h1{
@@ -25,8 +28,8 @@
 
         @include lg{
             justify-self: center;
-            margin-left: 500px;
-            margin-right: 500px;
+            margin-left: 600px;
+            margin-right: 600px;
         }
 
         form{
@@ -40,6 +43,7 @@
                 color: $text;
                 padding: 18px;
                 margin: 12px;
+                border: none;
             }
         }
     }
@@ -48,8 +52,8 @@
 
         @include lg{
             justify-self: center;
-            margin-left: 500px;
-            margin-right: 500px;
+            margin-left: 600px;
+            margin-right: 600px;
         }
 
         form{
@@ -63,6 +67,7 @@
                 color: $text;
                 padding: 18px;
                 margin: 12px;
+                border: none;
             }
         }
     }
