--- a/dev/scss/sections/_buynow.scss
+++ b/dev/scss/sections/_buynow.scss
@@ -1,11 +1,12 @@
 #buynow {
 
     background-color: $darkgray;
-    width: 600px;
-    padding: 24px;
-    display:flex;
-    justify-content: center;
+    width: 500px;
+    padding-left: 40px;
+    padding-bottom: 40px;
+    display:grid;
     border-radius: 24px;
+    margin: 20px;
 
     a {
         @include button2;
@@ -19,7 +20,7 @@
     h2 {
         font-family: 'Inter', sans-serif;
         font-weight: 400;
-        font-size: 40pt;
+        font-size: 30pt;
         color: white;
     }
 
@@ -31,7 +32,7 @@
     p {
         font-family: 'Inter', sans-serif;
         font-weight: 100;
-        font-size: 32pt;
+        font-size: 22pt;
         color: white;
     }
 
@@ -42,5 +43,10 @@
     #info{
         display: flex;
         flex-direction: column;
+    }
+
+    @include lg{
+        margin-left: 600px;
+        margin-right: 600px;
     }
 }
