--- a/dev/scss/sections/_more.scss
+++ b/dev/scss/sections/_more.scss
@@ -1,13 +1,20 @@
 #more {
 
-    img {
+    #bigphoto {
         margin-top: 32px;
+
+        @include lg{
+            margin-left: 300px;
+            margin-right: 300px;
+        }
     }
 
     #items {
 
         display:flex;
         flex-wrap: wrap;
+        margin-top: 100px;
+        margin-bottom: 100px;
 
         a{
             @include button2;
